# py_me

./: .gitignore  LICENSE.txt  README.md  py_me_project.code-workspace  pyproject.toml  setup.py
.github/workflows/: release.yml
py_me/: __init__.py  music_me.py  os_me.py  project_me.py  pyga_me.py  tk_me.py
py_me.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
py_me/__pyga_me_modules/: __ini__.py  animation.py  events.py  k_notes.py  objects.py
tests/: guia do VScode.txt  test_basic.py
