[project]
name = "py_me"
version = "1.3.6"
description = "Biblioteca Python com módulos para sons e interface gráfica"
authors = [{ name = "Isaias da Silva Nobrega", email = "isaiasdasilvanobrega@gmail.com" }]
maintainers = [{ name = "Isaias da Silva Nobrega", email = "isaiasdasilvanobrega@gmail.com" }]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
dependencies = [
    "pygame",
    "pydub"
]
keywords = ["pygame", "pydub", "audio", "music", "tkinter", "sound", "interface", "Python", "biblioteca"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Software Development :: Libraries",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/rip-mine2023/py_me"
"Source" = "https://github.com/rip-mine2023/py_me"
"Issues" = "https://github.com/rip-mine2023/py_me/issues"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"