[project]
name = "py_me"
version = "3.5.3"
description = "Python library with modules for sounds, graphical interface, semi-automatic creation of Python projects, and advanced file manipulation."
authors = [{ name = "Isaias da Silva Nobrega", email = "isaiasdasilvanobrega@gmail.com" }]
maintainers = [{ name = "Isaias da Silva Nobrega", email = "isaiasdasilvanobrega@gmail.com" }]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
dependencies = [
    "pygame",
    "pydub",
    "rich"
]
keywords = ["pygame", "pydub", "audio", "music", "tkinter", "sound", "interface", "Python", "biblioteca, projetos, project, os"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Software Development :: Libraries", 
  "Intended Audience :: Developers",
  "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/rip-mine2023/py_me"
"Source" = "https://github.com/rip-mine2023/py_me"
"Issues" = "https://github.com/rip-mine2023/py_me/issues"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"